Tab dragging: Do not show the blurred scrim if needed.

We should not show the blurred scrim when dragging a window to the
bottom of the screen.

Bug: 880960
Change-Id: Ieb0be61988529f914c3e2163234deb098015bb50
Reviewed-on: https://chromium-review.googlesource.com/1229158
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591850}
Former-commit-id: c65be28fdc961ba0f81205fa237de878b125e603